# ft260hid

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md
src/: consts.rs  device.rs  error.rs  hid.rs  io.rs  lib.rs
src/hid/: consts.rs  mngr.rs  rep_fifo.rs  reports.rs
src/hid/reports/: gpio.rs  i2c.rs  uart.rs
src/io/: gpio.rs  i2c.rs  uart.rs
tests/: gpio.rs  i2c.rs  lib.rs  open.rs  uart.rs
