[package]
name = "ft260hid"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["ftdi", "usb", "hid", "i2c", "uart"]
description = "Library to control FT260 USB-I2C/UART bridge IC"
repository = "https://github.com/kndysfm/ft260hid/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
hidapi = "2.6.1"
rand = "0.8.5"
serial_test = "3.1.1"
